--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,11 @@ authors = ["Konstantin Zhukov <moncruist@gmail.com>"]
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[profile.release]
+lto = true
+
 
 [dependencies]
 rust-ini = "0.14"
+reqwest = {version = "0.10", features = ["blocking", "json"]}
+serde = {version = "1.0", features = ["derive"]}
