--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ name = "simpleweather"
 version = "0.1.0"
 authors = ["Konstantin Zhukov <moncruist@gmail.com>"]
 edition = "2018"
-license = "GPLv3"
+license = "GPL-3.0-or-later"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [profile.release]
